--- a/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
+++ b/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
@@ -9,12 +9,12 @@
     <ItemGroup>
         <PackageReference Include="ErrorOr" Version="2.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
+        <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference
-            Include="..\DiamondJewelryAPI.Contracts\DiamondJewelryAPI.Contracts.csproj" />
+        <ProjectReference Include="..\DiamondJewelryAPI.Contracts\DiamondJewelryAPI.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
