--- a/src/DiamondJewelryAPI.API/appsettings.json
+++ b/src/DiamondJewelryAPI.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DiamondJewelryDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "diamond-jewelry",
+    "ProductsCollectionName": "products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
