adopt repository pattern

--- a/src/DiamondJewelryAPI.API/appsettings.json
+++ b/src/DiamondJewelryAPI.API/appsettings.json
@@ -1,8 +1,7 @@
 {
   "DiamondJewelryDB": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "diamond-jewelry",
-    "ProductsCollectionName": "products"
+    "DatabaseName": "diamond-jewelry"
   },
   "Logging": {
     "LogLevel": {
