--- a/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
+++ b/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="ErrorOr" Version="2.0.1" />
         <PackageReference Include="Mapster" Version="7.4.0" />
+        <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
         <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
