add get product filter options

--- a/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
+++ b/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
         <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+        <PackageReference Include="PowerUtils.Text" Version="3.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
