add sing in action

--- a/src/DiamondJewelryAPI.API/appsettings.json
+++ b/src/DiamondJewelryAPI.API/appsettings.json
@@ -3,6 +3,12 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "diamond-jewelry"
   },
+  "JwtSettings": {
+    "Secret": "ksdjghsdhjkfcgasdjkfghsdjkfhsdjkfd",
+    "ExpiryMinutes": 60,
+    "Issuer": "DiamondJewelry",
+    "Audience": "DiamondJewelry"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
