--- a/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
+++ b/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
@@ -7,9 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="ErrorOr" Version="2.0.1" />
         <PackageReference Include="Mapster" Version="7.4.0" />
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
         <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
         <PackageReference Include="PowerUtils.Text" Version="3.0.0" />
