--- a/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
+++ b/src/DiamondJewelryAPI.API/DiamondJewelryAPI.API.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
         <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
         <PackageReference Include="PowerUtils.Text" Version="3.0.0" />
+        <PackageReference Include="Stripe.net" Version="44.9.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
